# transformers-interpret

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  api.py  api_test.py  ner_example.ipynb  pyproject.toml  requirements.txt  setup.py  test.py  test_image.html
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code_style.yml  unit_tests.yml  workflow.yml
images/: transformers_interpret_A01.ai
notebooks/: classification_example.ipynb  explore_captum.ipynb  multiclass_classification_example.ipynb  ner_example.ipynb  vision_classification_explainer.ipynb
test/: test_explainer.py  test_multilabel_classification_explainer.py  test_question_answering_explainer.py  test_sequence_classification_explainer.py  test_token_classificication_explainer.py  test_zero_shot_explainer.py
test/text/: test_explainer.py  test_multilabel_classification_explainer.py  test_question_answering_explainer.py  test_sequence_classification_explainer.py  test_token_classification_explainer.py  test_zero_shot_explainer.py
test/vision/: test_image_classification.py
tests/: test_example.py
transformers_interpret/: __init__.py  attributions.py  custom_visualization.py  errors.py  explainer.py  explainer_old.py  explainers.py  interpret.py  viz.py
transformers_interpret/explainers/: __init__.py  multilabel_classification.py  question_answering.py  sequence_classification.py  token_classification.py  zero_shot_classification.py
transformers_interpret/explainers/text/: __init__.py  multilabel_classification.py  question_answering.py  sequence_classification.py  token_classification.py  zero_shot_classification.py
transformers_interpret/explainers/vision/: attribution_types.py  image_classification.py
