[tool.poetry]
name = "transformers-interpret"
version = "0.1.0"
description = ""
authors = ["Charles Pierse <charlespierse@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "5.4.2"
captum = ">=0.3.1"
transformers = ">=3.0.0"
ipython = "7.31.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
